<resources>
    <string name="app_name">TRIIBE User</string>

    <!--Application wide-->
    <string name="westfield_logo">Westfield logo</string>

    <!--Preferences-->
    <string name="user_id">com.example.triibe.triibeuserapp.USER_ID</string>

    <!--Boot detection receiver-->
    <string name="foreground_service_started">Foreground service started</string>

    <!--GetPermissionsActivity-->
    <string name="location">LOCATION</string>
    <string name="app_usage">APP USAGE</string>
    <string name="location_permission_description">The TRIIBE User app starts and stops automatically near and within Westfield malls. Surveys may be received based on location within a mall. For this we need permission to access your location.</string>
    <string name="app_usage_permission_description">Once the app has started, we would like to see the most popular apps you\'re running while at the mall. For this you will need to grant us permission. This is optional and will not prevent you from receiving surveys, but may lead to additional points when enabled.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="remove_permission">Remove permission</string>
    <string name="cancel_permission">Cancel</string>
    <string name="skip_permission">Skip</string>

    <!--AuthUiActivity-->
    <string name="title_activity_auth">Sign in</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="loading_user">Loading user&#8230;</string>

    <!--ViewSurveysActivity-->
    <string name="title_activity_view_surveys">Surveys</string>
    <string name="no_surveys">You don\'t currently have any surveys. Try going to the mall to get more surveys.</string>
    <string name="view_points">View Points</string>

    <!--ViewQuestionActivity-->
    <string name="title_activity_take_survey">Survey</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Questions from section: %1$d</string>
    <string name="survey_subheading">Participant Information Statement</string>
    <string name="confirm18">Please confirm you are 18 years old or above:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="radio_true">Yes</string>
    <string name="radio_false">No</string>
    <string name="question_logo">Question logo</string>
    <string name="title">Title</string>
    <string name="intro">Intro</string>
    <string name="phrase">Phrase</string>
    <string name="response">Answer</string>
    <string name="image_url">Image url</string>
    <string name="next_question">NEXT</string>
    <string name="previous_question">BACK</string>
    <string name="add_question">Add query</string>
    <string name="at_first_question">You\'re at the first question.</string>
    <string name="question_incomplete">Question incomplete</string>
    <string name="finish_survey">Finish</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="successfully_completed_survey">Survey Completed</string>

    <!--EditSurveyActivity-->
    <string name="title_activity_edit_survey">Edit Survey</string>
    <string name="edit_survey_details_title">Survey Details</string>
    <string name="edit_survey_id_hint">Survey ID*</string>
    <string name="edit_description_hint">Description*</string>
    <string name="edit_time_till_expiry_hint">Time till expiry</string>
    <string name="edit_points_hint">Points*</string>
    <string name="edit_num_protected_questions_hint">Number of protected question*</string>
    <string name="successfully_saved_survey">Survey saved</string>
    <string name="successfully_deleted_survey">Survey deleted</string>
    <string name="successfully_saved_question">Question saved</string>
    <string name="successfully_saved_trigger">Trigger saved</string>
    <string name="delete_survey">Delete survey</string>
    <string name="edit_trigger">Edit trigger</string>
    <string name="more_options">More options</string>
    <string name="menu_done">Done</string>
    <string name="edit_survey_bottom_sheet_title">Add</string>
    <string name="edit_survey_add_question">Question</string>
    <string name="edit_survey_add_trigger">Trigger</string>
    <string name="edit_survey_active">Active:</string>
    <string name="edit_survey_active_yes">Yes</string>
    <string name="edit_survey_active_no">No</string>
    <string name="edit_survey_default_num_protected_questions">0</string>

    <!--EditQuestionActivity-->
    <string name="title_activity_edit_question">Edit Question</string>
    <string name="edit_question_details_title">Question Details</string>
    <string name="edit_question_id_hint">Question ID*</string>
    <string name="edit_image_url_hint">Image url</string>
    <string name="edit_title_hint">Title*</string>
    <string name="edit_intro_hint">Intro</string>
    <string name="edit_question_phrase">Phrase*</string>
    <string name="edit_question_bottom_sheet_title">Add</string>
    <string name="edit_question_add_option">Option</string>
    <string name="delete_question">Delete question</string>
    <string name="edit_question_intro_link_key">Intro link key</string>
    <string name="edit_question_intro_link_url">Intro link URL</string>
    <string name="edit_question_required_phrase">Required phrase</string>
    <string name="edit_question_incorrect_answer_phrase">Incorrect answer phrase</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="edit_question_type">Type:</string>
    <string-array name="question_type_array">
        <item>Radio</item>
        <item>Checkbox</item>
        <item>Text</item>
    </string-array>

    <!--EditOptionActivity-->
    <string name="title_activity_edit_option">Edit Option</string>
    <string name="successfully_saved_option">Option saved</string>
    <string name="edit_option_details_title">Option Details</string>
    <string name="edit_option_id_hint">Option ID*</string>
    <string name="edit_option_phrase_hint">Phrase*</string>
    <string name="edit_option_extra_input_hint_hint">Extra input hint*</string>
    <string name="delete_option">Delete option</string>
    <string name="edit_option_extra_input_type">Extra input type:</string>
    <string name="edit_option_has_extra_input">Has extra input:</string>
    <string-array name="option_extra_input_type_array">
        <item>Text</item>
        <item>Number</item>
    </string-array>

    <!--EditLocationActivity-->
    <string name="title_activity_edit_location">Edit Location</string>
    <string name="successfully_saved_location">Location saved</string>
    <string name="edit_location_details_title">Location Details</string>
    <string name="edit_location_id_hint">Location ID</string>
    <string name="edit_location_name_hint">Name</string>
    <string name="menu_use_current_location">Use current location</string>
    <string name="menu_get_location_from_map">Get location from map</string>

    <!--EditTriggerActivity-->
    <string name="title_activity_edit_trigger">Edit Trigger</string>
    <string name="edit_trigger_details_title">Trigger Details</string>
    <string name="edit_trigger_id_hint">Trigger ID*</string>
    <string name="edit_trigger_lat_hint">Latitude*</string>
    <string name="edit_trigger_lon_hint">Longitude*</string>
    <string name="edit_trigger_radius_hint">Radius in metres*</string>
    <string name="edit_trigger_dwell_hint">Dwell in seconds*</string>
    <string name="edit_trigger_level_hint">Level</string>
    <string name="edit_trigger_level_distance">Level distance in metres</string>
    <string name="edit_trigger_time_hint">Time</string>
    <string name="delete_trigger">Delete trigger</string>

    <!--TrackDataActivity-->
    <string name="title_activity_track_data">Track data</string>
    <string name="sign_out">Sign out</string>
    <string name="take_survey">Take Survey</string>
    <string name="start_data_tracking">Start Data Tracking</string>
    <string name="stop_data_tracking">Stop Data Tracking</string>
    <string name="started_data_tracking">If it was implemented, data tracking would now be active</string>
    <string name="stopped_data_tracking">If it was implemented, data tracking would now be off</string>

    <!--ViewPointsActivity-->
    <string name="title_activity_view_points">Points</string>
    <string name="new_points_earned_title">New Points Earned</string>
    <string name="total_points_earned_title">Total Points Earned</string>

    <!--WebVisualisation-->
    <string name="open_visualisation">Open Visualisation</string>
    <string name="url_visualisation">http://mzhr.github.io/triibe-webapp</string>

</resources>
