<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/get_location_from_map"
        android:icon="@drawable/ic_add_location_white_24dp"
        android:title="@string/menu_get_location_from_map"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/use_current_location"
        android:icon="@drawable/ic_my_location_white_24dp"
        android:title="@string/menu_use_current_location"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/menu_done"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_trigger"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_trigger"
        app:showAsAction="never"/>
</menu>