<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_permissions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triibe.triibeuserapp.get_permissions.GetPermissionsActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/westfield_logo"
        android:src="@drawable/the_westfield_group_logo"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_permission_description"/>

    <Button
        android:id="@+id/grant_location_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_permission"/>

    <TextView
        android:id="@+id/app_usage_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_usage"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/app_usage_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_usage_permission_description"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/grant_app_usage_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant_permission"
            android:visibility="gone"/>

        <Button
            android:id="@+id/skip_app_usage_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_permission"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
